# xfiltrator

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  app.py  setup.cfg  setup.py
downloads/: collect.sh
templates/: downloads.html  fileupload.html  main_page.html  test_upload.html
tests/: conftest.py  test_download.py  test_factory.py  test_mainpage.py  test_upload.py
tests/files/: os_info.txt
xfil/: __init__.py  xfiltrate.py
xfil/downloads/: collect.sh
xfil/templates/: downloads.html
