[metadata]
name = xfil
version = 0.0.1
author = Jim Gaspari
description = A little tool to help exfiltrate data out of an organization
long_description = file: README.md
url = https://github.com/jimgaspari/xfiltrator
project_urls =
    Bug Tracker = https://github.com/jimgaspari/xfiltrator/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operatorating System :: OS Independent

[options]
packages = find: 
python_requires = >=3.10

[coverage:run]
branch = True
source = xfil